brat/test/golden/error/toplevel-leftovers3.brat.golden
Error in test/golden/error/toplevel-leftovers3.brat@FC {start = Pos {line = 2, col = 2}, end = Pos {line = 2, col = 5}}:
f(x) = x
 ^^^

  Type error: Inputs (b1 :: Bool) weren't used

